--- a/k8s/backend/hangman-api-service.yaml
+++ b/k8s/backend/hangman-api-service.yaml
@@ -2,12 +2,12 @@
     apiVersion: v1
     kind: Service
     metadata:
-      name: backend-service
+      name: hangman-api-service
     spec:
       ports:
-        - port: 80
-          targetPort: 8080
+        - port: 9905
+          targetPort: 9905
           name: http
           protocol: TCP
       selector:
-        app: backend
+        app: hangman-api
