--- a/k8s/frontend/frontend-deployment.yaml
+++ b/k8s/frontend/frontend-deployment.yaml
@@ -18,3 +18,4 @@
             image: gcr.io/sylvan-epoch-274407/hangman-ui:latest
             ports:
               - containerPort: 9000
+            imagePullPolicy: Always
